# ImageProcessing

./: .gitignore  .gitmodules  README.md  image_negatives.cpp
Affine_Transformations/: CMakeLists.txt  main.cpp  readme.md
ImageNegatives/: CmakeLists.txt  main.cpp  readme.md
NumberPlateRecognition/: readme.md
